--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,5 +36,6 @@
       <%= debug(current_user) %>
       <%= debug(Rails.env) %>
     <% end %>
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
