--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -5,8 +5,6 @@
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 
-<%= yield :head %>
-
 <%# PWA Manifest (uncomment if using) %>
 <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
@@ -21,6 +19,10 @@
 <%= stylesheet_link_tag "@primer/primitives/dist/css/functional/themes/dark.css", "data-turbo-track": "reload" %>
 
 <%= javascript_include_tag "@primer/view-components/app/assets/javascripts/primer_view_components.js", "data-turbo-track": "reload" %>
+<script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.12/lib/draggable.bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <%= javascript_importmap_tags %>
 <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+
+<%= yield :head %>
