--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,44 @@
  *= require_tree .
  */
 
-.page-header {
+ .logo-top-left {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 110px;   /* adjust as needed */
+  height: auto;
+  pointer-events: none; /* optional: lets clicks pass through */
+  padding: 10px;
+}
+
+ .header-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: 20px;
+ }
+ 
+.header-wrapper img {
+  padding-top: 10px;
+  margin-right: 30px;
+}
+
+ .page-header {
   font-size: 64px;
   text-wrap-mode: nowrap;
 }
 
-.flash-container {
-  margin-bottom: 5px;
-}
-
 .main-container {
   min-height: 600px;
+}
+
+.border-top {
+    border-top-color: var(--tawny-ember-muted) !important;
+}
+
+@media (max-width: calc(768px - 0.02px)) {
+   .header-wrapper {
+    flex-direction: column;
+   }
 }
