--- a/app/components/wordsearch_component.html.erb
+++ b/app/components/wordsearch_component.html.erb
@@ -3,6 +3,7 @@
   display: flex;
   gap: 2em;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 .wordsearch-grid {
   border-collapse: collapse;
@@ -10,6 +11,8 @@
 }
 .wordsearch-grid td {
   border: 1px solid #444;
+  min-width: 2em;
+  min-height: 2em;
   width: 2em;
   height: 2em;
   text-align: center;
