--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,6 @@
     <li><strong>Username:</strong> <%= current_user.username %></li>
     <li><strong>Email:</strong> <%= current_user.email_address %></li>
     <li><strong>Joined:</strong> <%= current_user.created_at.strftime("%B %d, %Y") %></li>
+    <li><strong>Coins:</strong> <%= current_user.coins %></li>
   </ul>
 </div>
