--- a/app/views/wordsearch/show.html.erb
+++ b/app/views/wordsearch/show.html.erb
@@ -3,6 +3,9 @@
 <div class="wordsearch-container"
      data-controller="wordsearch"
      data-wordsearch-id="<%= @wordsearch.id %>">
+     <div class="wordsearch-complete-message">
+     🎉 Wordsearch Complete! 🎉
+     </div>
      <div class="spinner">
           <%= render(Primer::Beta::Spinner.new(size: :medium)) %>
      </div>
