--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@
   box-sizing: border-box;
 }
 
- .logo-top-left {
+.logo-top-left {
   position: fixed;
   top: 0;
   left: 0;
@@ -45,7 +45,17 @@
   margin-right: 30px;
 }
 
- .page-header {
+.coins-container {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  img {
+    margin-right: 0;
+    padding: 5px;
+  }
+}
+
+.page-header {
   font-size: 64px;
 }
 
@@ -58,8 +68,12 @@
 }
 
 @media (max-width: calc(768px - 0.02px)) {
-   .header-wrapper {
+  .header-wrapper {
     flex-direction: column;
     text-align: center;
-   }
+  }
+
+  .coins-container {
+    display: none; /* Hide coins on small screens */  
+  }
 }
