--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
       <%= link_to image_tag("icon_minimal.svg", size: "100"), "/" %>
       <%= render(Primer::Beta::Heading.new(tag: :h1, classes: "page-header")) { @pagehead || "Spellings" } %>
       <div class="coins-container">
-        <span>Letter coins: <%= current_user.coins %></span>
+        <span>Letter coins: <%= current_user.coin_amount %></span>
         <%= link_to image_tag("fancy-coin.svg", size: "80"), "/" %>
       </div>
     <% end %>
